re PR rtl-optimization/83213 (peephole bug with -O2)

PR rtl-optimization/83213
	* recog.c (peep2_attempt): Copy over CROSSING_JUMP_P from peepinsn
	to last if both are JUMP_INSNs.

From-SVN: r256728